js/js.translator/testData/incremental/invalidation/companionPropertiesWithIntraModuleInliner/lib2/l2string.0.kt
inline fun testStringProperty(): Int {
    return MyClass.stringProperty.toInt()
}
